# freesurfer

./: .gitignore  Makefile.am  Makefile.extra  acinclude.m4  configure.in  freesurfer-data.md5sums
BrainstemSS/: Makefile.am
HippoSF/: Makefile.am
check_siemens_dir/: Makefile.am  check_siemens_dir.c
debian/: TODO  blends  changelog  control  copyright  freesurfer-FSMAJORVER.dirs.template  freesurfer-FSMAJORVER.install.template  freesurfer-FSMAJORVER.links.template  freesurfer-FSMAJORVER.lintian-overrides.template  freesurfer-FSMAJORVER.sh.template  freesurfer-common-FSMAJORVER.install.template  freesurfer-common-FSMAJORVER.links.template  freesurfer-fsfast-FSMAJORVER.install.template  freesurfer-fsfast-FSMAJORVER.lintian-overrides.template  freesurfer-sloppy-FSMAJORVER.install.template  freesurfer-sloppy-common-FSMAJORVER.install.template  freesurfer-sloppy-fsfast-FSMAJORVER.install.template  freesurfer.sh.template  freesurfer_gui_app_wrapper.template  matlab-freesurfer-FSMAJORVER.install.template  matlab-freesurfer-sloppy-FSMAJORVER.install.template  repack.sh  rules  scuba.desktop.template  scuba2.desktop.template  upstream
dicom/: Makefile.am
distribution/: FreeSurferEnv.csh  Makefile.am  nmr-dev-env  nmr-std-env
distribution/average/: Makefile.am
distribution/average/Buckner_JNeurophysiol11_MNI152/: Makefile.am
distribution/average/Choi_JNeurophysiol12_MNI152/: Makefile.am
distribution/average/Yeo_JNeurophysiol11_MNI152/: Makefile.am
distribution/average/surf/: Makefile.am
distribution/diffusion/mgh-dti-seqpack/: Makefile.am
distribution/docs/: Makefile.am
distribution/fsafd/: Makefile.am
distribution/lib/: Makefile.am
distribution/lib/bem/: Makefile.am
distribution/subjects/: Makefile.am
distribution/trctrain/: Makefile.am
dummy/: dummy.c
freeview/: Makefile.am
fsfast/: Makefile.am
fsfast/docs/: Makefile.am
fsfast/toolbox/: Makefile.am
fsgdf/: Makefile.am  fsgdf.c
fslutils/: Makefile.am
hipsstubs/: Makefile.am
histo_compute_joint_density/: Makefile.am  histo_compute_joint_density.c
histo_fix_topology/: histo_fix_topology.c
histo_register_block/: Makefile.am  histo_register_block.c
histo_segment/: histo_segment.c
histo_synthesize/: histo_synthesize.c
images/: Makefile.am
include/: art1.h  artmap.h  mri.h
label2flat/: label2flat.c
label2patch/: label2patch.c
label_area/: Makefile.am  label_area.c
label_border/: label_border.c
log/: Makefile.am
matlab/: MRIread.m  MRIwrite.m  Makefile.am  read_meas_dat.m  read_meas_prot.m  read_meas_prot__struct.m
mkxsubjreg/: Makefile.am  mkxsubjreg.c
mri_add_xform_to_header/: Makefile.am  mri_add_xform_to_header.c
mri_and/: mri_and.c  mri_or.c
mri_annotation2label/: Makefile.am  mri_annotation2label.c
mri_aparc2aseg/: mri_aparc2aseg.c
mri_aparc2wmseg/: mri_aparc2wmseg.c
mri_apply_inu_correction/: mri_apply_inu_correction.c
mri_aseg_edit_reclassify/: mri_aseg_edit_reclassify.c
mri_aseg_edit_train/: mri_aseg_edit_train.c
mri_auto_fill/: Makefile.am  mri_auto_fill.c
mri_average/: Makefile.am  mri_average.c
mri_bc_sc_bias_correct/: mri_bc_sc_bias_correct.c
mri_bias/: mri_apply_bias.c  mri_compute_bias.c
mri_binarize/: mri_binarize.c
mri_build_priors/: Makefile.am  mri_build_priors.c
mri_ca_label/: Makefile.am  mri_ca_label.c
mri_ca_normalize/: Makefile.am  mri_ca_normalize.c  mri_cal_normalize.c
mri_ca_register/: Makefile.am  mri_ca_register.c
mri_ca_tissue_parms/: Makefile.am  mri_ca_tissue_parms.c
mri_ca_train/: Makefile.am  mri_ca_train.c
mri_cc/: Makefile.am  mri_cc.c
mri_cht2p/: Makefile.am
mri_cnr/: Makefile.am  mri_cnr.c
mri_compile_edits/: mri_compile_edits.c
mri_compute_change_map/: mri_compute_change_map.c
mri_compute_overlap/: Makefile.am  mri_compute_overlap.c
mri_compute_seg_overlap/: mri_compute_seg_overlap.c
mri_compute_structure_transforms/: mri_compute_structure_transforms.c
mri_compute_volume_fractions/: mri_compute_volume_fractions.c
mri_concat/: mri_concat.c
mri_concatenate_lta/: mri_concatenate_lta.c
mri_convert/: Makefile.am  mri_convert.c  mri_make_uchar.c
mri_convert_mdh/: Makefile.am  mri_convert_mdh.c
mri_copy_values/: Makefile.am  mri_copy_values.c
mri_cor2label/: Makefile.am  mri_cor2label.c
mri_deface/: Makefile.am  mri_deface.c
mri_diff/: mri_diff.c
mri_edit_segmentation/: Makefile.am  mri_edit_segmentation.c
mri_edit_segmentation_with_surfaces/: Makefile.am
mri_edit_wm_with_aseg/: mri_edit_wm_with_aseg.c
mri_em_register/: Makefile.am  mri_em_register.c
mri_estimate_tissue_parms/: Makefile.am  mri_estimate_tissue_parms.c
mri_evaluate_morph/: Makefile.am  mri_evaluate_morph.c
mri_extract/: Makefile.am  mri_extract.c
mri_fill/: Makefile.am  mri_fill.c
mris2rgb/: Makefile.am  mris2rgb.c
nmovie/: Makefile.am  nmovie.c
tkregister2/: Makefile.am
(+467 files in other folders)
