#
# Makefile.am
#
# licence files should be copied over to the install directory
foodir=$(prefix)/docs
foo_DATA=citation.minc license.freesurfer  license.mesa  copywrite.minc license.fsl license.minc registration.notes license.gnu license.tcltk license.html_lib license.tix license.afni recon1.ps recon2.ps FreeSurferManual.pdf

# Our release target. Include files to be excluded here. They will be
# found and removed after 'make install' is run during the 'make
# release' target.
EXCLUDE_FILES=""
include $(top_srcdir)/Makefile.extra
